backend/fuzztrees/static/css/layout.css
#toolbar {
    height: 37px;
}

#FuzzedContent {
    position: absolute;
    top:      39px;
    bottom:   0;
    width:    100%;
}

#FuzzedShapes {
	position:  absolute;
    top:       0;
    left:      0;
    width:     200px;
    min-width: 200px;
    overflow:  auto;
    z-index:   100;
}

#FuzzedCanvas {
	position:         relative;
	height:           100%;
	overflow:         auto;
    background-color: white;
    z-index:          0;
}

#FuzzedProperties {
    position:  absolute;
    top:       0;
    right:     0;
    width:     250px;
    min-width: 250px;
    overflow:  auto;
    z-index:   100;
}

.fuzzed-node-thumbnail-cell {
    text-align: center;
    font-size:  0.7em;
    margin:     10px 0px;
}

.fuzzed-node-thumbnail {
    display: inline-block;
}

.fuzzed-node-thumbnail svg {
    margin:  3px 0 5px 0;
}

.fuzzed-node-thumbnail-label {
    /* here be dragons - nasty workaround for the draggable centering problem */
    display: block;
}

.fuzzed-node {
    text-align: center;;
}

.fuzzed-node-image {
    display:  inline-block;
    position: relative;
    margin:   3px;
    z-index:  100;
}

.fuzzed-node-label {
    display:          block;
    position:         relative;
    height:           15px;
    line-height:      15px;
    background-color: rgba(255, 255, 255, 0.7);
    z-index:          100; /* above connections */
    font-weight:      bold;
    font-size:        0.8em;
    text-align:       center;
    overflow:         hidden;
    text-overflow:    ellipsis;
    white-space:      nowrap;
}

.fuzzed-node-drop-active {
    outline: #409FFF solid 3px;
}

.fuzzed-node-halo-connect {
    width:            10px;
    height:           10px;
    background-color: #409FFF;
    position:         absolute;
    visibility:       hidden;
    top:              0;
    right:            0;
    z-index:          150; /* above image, TODO: let halo care about that */
}

.fuzzed-node:hover .fuzzed-node-halo-connect {
    visibility: visible;
}

.jsplumb-endpoint {
    opacity: 0;
    z-index: 50; /* above connection, below image */
}

.jsplumb-endpoint.jsplumb-endpoint-hover {
    opacity: 1;
}

/* FIX: For some reasons endpoints sometimes get this class when dragging connections */
.jsplumb-endpoint.fuzzed-node-drop-active {
    outline: none;
}

#FuzzedProperties .ui-field-contain {
    margin: 5px 0;
}

#FuzzedProperties .fuzzed-property-label {
    vertical-align: middle;
    font-weight:    bold;
    width:          30%;
    font-size:      12px;
}

#FuzzedProperties .fuzzed-property-text {
    font-size:   12px;
    line-height: 1;
    width:       64%;
}

#FuzzedProperties input[disabled] {
    background-color:   transparent;
    border:             none;
    outline:            none;
    -webkit-box-shadow: none;
    -moz-box-shadow:    none;
    box-shadow:         none;
}

